--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
-beautifulsoup4
-Django
-django-cors-headers
-django-extensions
-django-filter
-graphene-django
-html5lib
-pandas
-requests
-ujson
-urllib3
+aniso8601==7.0.0
+asgiref==3.4.1
+beautifulsoup4==4.10.0
+certifi==2021.5.30
+charset-normalizer==2.0.6
+Django==3.2.7
+django-cors-headers==3.8.0
+django-extensions==3.1.3
+django-filter==2.4.0
+graphene==2.1.9
+graphene-django==2.15.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+html5lib==1.1
+idna==3.2
+numpy==1.21.2
+pandas==1.3.3
+promise==2.3
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
+Rx==1.6.1
+singledispatch==3.7.0
+six==1.16.0
+soupsieve==2.2.1
+sqlparse==0.4.2
+text-unidecode==1.3
+ujson==4.1.0
+urllib3==1.26.6
+webencodings==0.5.1
