--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,129 @@
+acme==1.1.0
 aniso8601==7.0.0
+apt-xapian-index==0.49
 asgiref==3.4.1
 beautifulsoup4==4.10.0
+blinker==1.4
+certbot==0.40.0
+certbot-apache==0.39.0
 certifi==2021.5.30
+chardet==3.0.4
 charset-normalizer==2.0.6
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+cryptography==2.8
+cupshelpers==1.0
+cycler==0.10.0
+dateparser==1.0.0
+dbus-python==1.2.16
+defer==1.0.6
+distro==1.4.0
+distro-info===0.23ubuntu1
 Django==3.2.7
 django-cors-headers==3.8.0
 django-extensions==3.1.3
 django-filter==2.4.0
+django-graphql-jwt==0.3.4
+entrypoints==0.3
+evdev==1.3.0
+future==0.18.2
+gpg===1.13.1-unknown
 graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
 html5lib==1.1
+httplib2==0.14.0
 idna==3.2
+josepy==1.2.0
+keyring==18.0.1
+keyrings.alt==3.4.0
+kiwisolver==1.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+linecache2==1.0.0
+lxml==4.6.3
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.1.1
+MarkupSafe==1.1.0
+matplotlib==3.1.2
+mock==3.0.5
+netifaces==0.10.4
 numpy==1.21.2
+oauthlib==3.1.0
+olefile==0.46
+packaging==20.3
 pandas==1.3.3
+parsedatetime==2.4
+pbr==5.4.5
+pexpect==4.6.0
+Pillow==7.0.0
 promise==2.3
+protobuf==3.6.1
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+Pygments==2.3.1
+PyGObject==3.36.0
+PyICU==2.4.2
+PyJWT==2.1.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.6
+PyQt5==5.14.1
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.6
+python-augeas==0.5.0
 python-dateutil==2.8.2
+python-debian===0.1.36ubuntu1
+python-magic==0.4.16
 pytz==2021.1
+pyxattr==0.6.1
+pyxdg==0.26
+PyYAML==5.3.1
+regex==2021.8.28
+reportlab==3.5.34
 requests==2.26.0
+requests-toolbelt==0.8.0
+requests-unixsocket==0.2.0
 Rx==1.6.1
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+setproctitle==1.1.10
+simplejson==3.16.0
 singledispatch==3.7.0
+sip==4.19.21
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.2
+ssh-import-id==5.10
+stringcase==1.2.0
+system-service==0.3
+systemd-python==234
+testresources==2.0.0
 text-unidecode==1.3
+traceback2==1.4.0
+tzlocal==3.0
+ubuntu-advantage-tools==27.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
 ujson==4.1.0
+ultimate-sitemap-parser==0.5
+unattended-upgrades==0.1
+unittest2==1.1.0
 urllib3==1.26.6
+usb-creator==0.3.7
+wadllib==1.3.3
 webencodings==0.5.1
+xkit==0.0.0
+youtube-dl==2020.3.24
+zope.component==4.3.0
+zope.event==4.4
+zope.hookable==5.0.0
+zope.interface==4.7.1
