--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.7
 django-cors-headers==3.8.0
 django-extensions==3.1.3
 django-filter==2.4.0
+django-graphql-jwt==0.3.4
 graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
@@ -16,6 +17,7 @@ idna==3.2
 numpy==1.21.2
 pandas==1.3.3
 promise==2.3
+PyJWT==2.1.0
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
