--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,18 @@ click==7.1.2
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+dj-database-url==0.5.0
 Django==3.2.8
 django-cors-headers==3.10.0
 django-extensions==3.1.3
 django-filter==21.1
 django-graphql-jwt==0.3.4
+django-heroku==0.3.1
 graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+gunicorn==20.1.0
 html5lib==1.1
 idna==3.2
 kombu==5.1.0
@@ -27,6 +30,7 @@ numpy==1.21.2
 pandas==1.3.3
 promise==2.3
 prompt-toolkit==3.0.20
+psycopg2==2.9.1
 PyJWT==2.2.0
 python-dateutil==2.8.2
 pytz==2021.3
@@ -44,3 +48,4 @@ urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.2.5
 webencodings==0.5.1
+whitenoise==5.3.0
