--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,21 @@
-amqp==5.0.6
-aniso8601==7.0.0
-asgiref==3.4.1
-beautifulsoup4==4.10.0
-billiard==3.6.4.0
-celery==5.1.2
-certifi==2021.10.8
-charset-normalizer==2.0.6
-click==7.1.2
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-dj-database-url==0.5.0
-Django==3.2.8
-django-cors-headers==3.10.0
-django-extensions==3.1.3
-django-filter==21.1
-django-graphql-jwt==0.3.4
-django-heroku==0.3.1
-graphene==2.1.9
-graphene-django==2.15.0
-graphql-core==2.3.2
-graphql-relay==2.0.1
-gunicorn==20.1.0
-html5lib==1.1
-idna==3.2
-kombu==5.1.0
-munch==2.5.0
-numpy==1.21.2
-pandas==1.3.3
-promise==2.3
-prompt-toolkit==3.0.20
-psycopg2==2.9.1
-PyJWT==2.2.0
-python-dateutil==2.8.2
-pytz==2021.3
-redis==3.5.3
-requests==2.26.0
-Rx==1.6.1
-singledispatch==3.7.0
-six==1.16.0
-soupsieve==2.2.1
-sqlparse==0.4.2
-text-unidecode==1.3
-ujson==4.2.0
-ultimate-sitemap-parser==0.5
-urllib3==1.26.7
-vine==5.0.0
-wcwidth==0.2.5
-webencodings==0.5.1
-whitenoise==5.3.0
+beautifulsoup4
+celery
+Django
+django-cors-headers
+django-extensions
+django-filter
+django-graphql-jwt
+django-heroku
+graphene-django
+graphql-core
+graphql-relay
+gunicorn
+html5lib
+munch
+pandas
+psycopg2
+redis
+requests
+ujson
+ultimate-sitemap-parser
+urllib3
