fix graphql deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,17 @@ dj-database-url
 django-cors-headers
 django-extensions
 django-filter
-django-graphql-jwt
 django-heroku
+graphql-core<3
 graphene-django
-graphql-core
-graphql-relay
+django-graphql-jwt
 gunicorn
 html5lib
 munch
 pandas
 psycopg2
 redis
+urllib3
 requests
 ujson
 ultimate-sitemap-parser
-urllib3
