--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ idna==3.2
 kombu==5.1.0
 munch==2.5.0
 numpy==1.21.2
-#pandas==1.3.3
+pandas==1.3.3
 promise==2.3
 prompt-toolkit==3.0.20
 psycopg2==2.9.1
